| Summary: | ASTERISK-28536: Asterisk release candidates fail to build on FreeBSD | ||
| Reporter: | Guido Falsi (madpilot) | Labels: | |
| Date Opened: | 2019-09-14 10:00:43 | Date Closed: | 2019-09-17 08:35:00 |
| Priority: | Major | Regression? | Yes |
| Status: | Closed/Complete | Components: | Channels/chan_dahdi |
| Versions: | 13.29.0 16.6.0 17.0.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | FreeBSD | Attachments: | |
| Description: | A recent change introduced the switch statement:
switch (mfcr2->r2master) On FreeBSD the clang compiler errors out, since it requires the switch statement argument to be an integer. I'm going to propose a fix in gerrit shortly. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2019-09-14 10:00:44.781-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. By: Guido Falsi (madpilot) 2019-09-14 10:09:22.436-0500 This is the actual error message I get: chan_dahdi.c:15268:4: error: statement requires expression of integer type ('pthread_t' (aka 'struct pthread *') invalid) switch (mfcr2->r2master) { ^ ~~~~~~~~~~~~~~~ 1 error generated. By: Friendly Automation (friendly-automation) 2019-09-17 08:35:01.419-0500 Change 12873 merged by Friendly Automation: chan_dahdi: Fix build with clang/llvm [https://gerrit.asterisk.org/c/asterisk/+/12873|https://gerrit.asterisk.org/c/asterisk/+/12873] By: Friendly Automation (friendly-automation) 2019-09-17 09:31:46.768-0500 Change 12882 merged by George Joseph: chan_dahdi: Fix build with clang/llvm [https://gerrit.asterisk.org/c/asterisk/+/12882|https://gerrit.asterisk.org/c/asterisk/+/12882] By: Friendly Automation (friendly-automation) 2019-09-17 09:32:01.428-0500 Change 12872 merged by George Joseph: chan_dahdi: Fix build with clang/llvm [https://gerrit.asterisk.org/c/asterisk/+/12872|https://gerrit.asterisk.org/c/asterisk/+/12872] By: Friendly Automation (friendly-automation) 2019-09-17 09:32:25.973-0500 Change 12881 merged by George Joseph: chan_dahdi: Fix build with clang/llvm [https://gerrit.asterisk.org/c/asterisk/+/12881|https://gerrit.asterisk.org/c/asterisk/+/12881] By: Friendly Automation (friendly-automation) 2019-09-17 09:32:41.978-0500 Change 12883 merged by George Joseph: chan_dahdi: Fix build with clang/llvm [https://gerrit.asterisk.org/c/asterisk/+/12883|https://gerrit.asterisk.org/c/asterisk/+/12883] By: Friendly Automation (friendly-automation) 2019-09-17 09:32:56.841-0500 Change 12874 merged by George Joseph: chan_dahdi: Fix build with clang/llvm [https://gerrit.asterisk.org/c/asterisk/+/12874|https://gerrit.asterisk.org/c/asterisk/+/12874] By: Friendly Automation (friendly-automation) 2019-09-17 09:33:21.514-0500 Change 12884 merged by George Joseph: chan_dahdi: Fix build with clang/llvm [https://gerrit.asterisk.org/c/asterisk/+/12884|https://gerrit.asterisk.org/c/asterisk/+/12884] | ||